--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
   ],
   "require": {
     "php": "^8.2",
-    "illuminate/support": "^8.0|^9.0|^10.0|^11.0|^12.0,
+    "illuminate/support": "^8.0|^9.0|^10.0|^11.0|^12.0",
     "illuminate/database": "^8.0|^9.0|^10.0|^11.0|^12.0",
     "illuminate/cache": "^8.0|^9.0|^10.0|^11.0|^12.0"
   },
